# pdfdiff

./: .gitignore  CLAUDE.md  README.md  cli.py  comparator.py  pyproject.toml  renderer.py  run.sh  test_comparator.py  test_reporter.py  todo.md
src/pdfdiff/: __init__.py  comparator.py  reporter.py
tests/: conftest.py  test_cli.py  test_renderer.py
